# AI-Gateway

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  PERFORMANCE_CHANGES_SUMMARY.md  PERFORMANCE_IMPLEMENTATION_COMPLETE.md  README.md  deploy-local.sh  docker-compose.yml  mkdocs.yml  nginx.docs-subdomain.conf  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md  requirements-test.txt  run.py
attached_assets/: Pasted-Here-is-a-tight-implementation-only-prompt-you-can-past_1764688093658.txt  Pasted-I-ll-conduct-a-comprehensive-verification-of-the-entire_1765367599545.txt  f5_ai_gw_1764767800434.rtf
backend/: run_migrations.py
backend/app/: main.py
backend/configs/: guardrails.yaml  models.yaml  providers.yaml  routing_rules.yaml
backend/migrations/: add_alert_tables.sql  add_provider_health_tables.sql
backend/scripts/: README_PERFORMANCE.md  add_performance_indexes.sql  seed_demo_data.py  test_performance.py
docs/: AI_GATEWAY_DOCUMENTATION.md  ALERT_SYSTEM_COMPLETE.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  ERROR_HANDLING.md  FILE_GUARDRAILS.md  FRONTEND_AND_PERSISTENCE_COMPLETE.md  GUARDRAILS.md  PERFORMANCE_OPTIMIZATIONS_IMPLEMENTED.md  PHASE1_IMPLEMENTATION.md  PHASE1_STATUS.md  PROMPT_CACHING.md  SSO.md  STATISTICS.md  index.md
docs/assets/: extra.css
docs/deploy/: aws.md  azure.md  docker.md  gcp.md  (+4 more)
site/: 404.html  index.html  sitemap.xml
tests/: __init__.py  conftest.py  test_alerts.py  test_api_keys.py  test_audit.py  test_auth.py  test_billing.py  test_chat_completions.py  test_guardrails.py  test_health.py  test_organization.py  test_router.py  test_tenants.py  test_users.py
ui/: index.html  package-lock.json  package.json  vite.config.js
(+199 files in other folders)
